<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorThemeBackground"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:gravity="center|start"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/title_back_icon"
            style="?android:attr/selectableItemBackgroundBorderless"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_back"
            android:tint="@color/colorTextGray"
            android:tooltipText="@string/back" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2.5dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/colorTextGray"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_permotion_round"
        android:lineSpacingExtra="6dp"
        android:padding="10dp"
        android:text="@string/function_desc"
        android:textColor="@color/colorTextDark"
        android:textSize="13sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdgeLength="10dp"
        android:fillViewport="true"
        android:paddingBottom="10dp"
        android:requiresFadingEdge="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/throw_runtime_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_button_round"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/throw_runtime"
                android:textColor="@color/colorTextGray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/throw_illegal_state_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_button_round"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/throw_illegalstate"
                android:textColor="@color/colorTextGray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/throw_null_pointer_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_button_round"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/throw_nullpointer"
                android:textColor="@color/colorTextGray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/throw_exception_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_button_round"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/throw_exception"
                android:textColor="@color/colorTextGray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/throw_native_error_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_button_round"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/throw_native_error"
                android:textColor="@color/colorTextGray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/throw_multi_process_error_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_button_round"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/throw_multi_process_error"
                android:textColor="@color/colorTextGray"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>